.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Service_Activity__c.object
<CustomObject>
    <description>Activity performed while managing Service Requests (Cases)</description>
    <fields>
        <fullName>Citizen_Email_for_Code_SR__c</fullName>
        <description>Citizen email to send reinspection notification for Code SRs</description>
        <label>Citizen Email for Code SR</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Incap311__Activity_Outcome_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The response chosen during this activity</description>
        <label>Activity Outcome Response</label>
        <referenceTo>Incap311__Activity_Outcome_Response__c</referenceTo>
        <relationshipLabel>Service Activities</relationshipLabel>
        <relationshipName>Service_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Activity_Outcome__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Outcome for the activity</description>
        <label>Activity Outcome</label>
        <referenceTo>Incap311__Activity_Outcome__c</referenceTo>
        <relationshipLabel>Service Activities</relationshipLabel>
        <relationshipName>Service_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Activity__c</fullName>
        <formula>Incap311__Service_Type_Version_Activity__r.Incap311__Activity__r.Incap311__Activity_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Additional_Comments__c</fullName>
        <description>Any extra comments about this activity</description>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Allowable_Outcome__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outcome</label>
        <referenceTo>Incap311__Outcome__c</referenceTo>
        <relationshipLabel>Service Activities</relationshipLabel>
        <relationshipName>Service_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Applied_Outcome__c</fullName>
        <formula>Incap311__Activity_Outcome__r.Incap311__Outcome_Detail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applied Outcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Assigned_To_Formula__c</fullName>
        <formula>if( Incap311__Contact_Name__c &lt;&gt;null, Incap311__Contact_Name__r.FirstName +&apos; &apos;+Incap311__Contact_Name__r.LastName ,  Incap311__Assigned_To__r.FirstName +&apos; &apos;+Incap311__Assigned_To__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To - User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Activities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Attempts__c</fullName>
        <label>Attempts</label>
        <summaryForeignKey>Incap311__Activity_Attempt__c.Incap311__Service_Activity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Incap311__Contact_Email__c</fullName>
        <formula>Incap311__Service_Request__r.Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this service activity is assigned to a contact this field is used</description>
        <label>Assigned To - Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Activities</relationshipLabel>
        <relationshipName>Service_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Expected_Date_Time__c</fullName>
        <label>Expected Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incap311__External_Comments__c</fullName>
        <label>External Comments</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Finish_Date__c</fullName>
        <label>Finish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incap311__Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__LegacyId__c</fullName>
        <externalId>true</externalId>
        <label>LegacyId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Incap311__Make_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Make Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Manually_Touched__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether an activity has been edited from worker console</description>
        <label>Manually Touched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Order__c</fullName>
        <formula>Incap311__Service_Type_Version_Activity__r.Incap311__Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Reallocated_Queue__c</fullName>
        <label>Reallocated Queue</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Reallocation_Reason__c</fullName>
        <label>Reallocation Reason</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__SR_Address__c</fullName>
        <formula>Incap311__Service_Request__r.Incap311__Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__SR_Expected_Resolution_Date__c</fullName>
        <formula>DATEVALUE(Incap311__Service_Request__r.Incap311__Expected_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Expected Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incap311__SR_Status__c</fullName>
        <formula>TEXT(Incap311__Service_Request__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__SR_Type_Name__c</fullName>
        <formula>Incap311__Service_Request__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Request__c</fullName>
        <label>Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Activities</relationshipLabel>
        <relationshipName>Service_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Version_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Type Version Activity</label>
        <referenceTo>Incap311__Service_Type_Version_Activity__c</referenceTo>
        <relationshipLabel>Service Activities</relationshipLabel>
        <relationshipName>Service_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Status__c</fullName>
        <description>The current status of the activity</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Transferred_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this activity results in a transfer of a service request this field has the transferred service request</description>
        <label>Transferred Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Activities (Transferred Case)</relationshipLabel>
        <relationshipName>Service_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Activity</label>
    <listViews>
        <fullName>Contact_Harsha</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Incap311__Activity__c</columns>
        <columns>Incap311__Service_Request__c</columns>
        <columns>Incap311__Assigned_To_Formula__c</columns>
        <columns>Incap311__Contact_Name__c</columns>
        <columns>Incap311__Assigned_To__c</columns>
        <columns>Incap311__SR_Status__c</columns>
        <columns>Incap311__SR_Type_Name__c</columns>
        <columns>Incap311__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Incap311__Contact_Name__c</field>
            <operation>contains</operation>
            <value>harsha</value>
        </filters>
        <label>Contact-Harsha</label>
    </listViews>
    <listViews>
        <fullName>Incap311__All</fullName>
        <columns>NAME</columns>
        <columns>Incap311__Activity__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Incap311__Contact_Email__c</columns>
        <columns>Incap311__SR_Type_Name__c</columns>
        <columns>Incap311__Service_Request__c</columns>
        <columns>Incap311__Status__c</columns>
        <columns>Incap311__SR_Status__c</columns>
        <columns>Incap311__Assigned_To_Formula__c</columns>
        <columns>Incap311__Contact_Name__c</columns>
        <columns>Incap311__Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Incap311__Assigned_To__c</field>
            <operation>contains</operation>
            <value>city</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>User_Harsha</fullName>
        <columns>NAME</columns>
        <columns>Incap311__Activity__c</columns>
        <columns>Incap311__Assigned_To__c</columns>
        <columns>Incap311__Assigned_To_Formula__c</columns>
        <columns>Incap311__SR_Type_Name__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Incap311__Service_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Incap311__Assigned_To__c</field>
            <operation>contains</operation>
            <value>Harsha</value>
        </filters>
        <label>User-Harsha</label>
    </listViews>
    <nameField>
        <displayFormat>SACT-{00000000}</displayFormat>
        <label>Service Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Incap311__Finish_date_cannot_be_before_service_was</fullName>
        <active>true</active>
        <errorConditionFormula>and( Incap311__Finish_Date__c &lt;=  Incap311__Service_Request__r.CreatedDate,
ISCHANGED(Incap311__Finish_Date__c), NOT( ISBLANK(Incap311__Finish_Date__c) ))</errorConditionFormula>
        <errorDisplayField>Incap311__Finish_Date__c</errorDisplayField>
        <errorMessage>Finish date cannot be before service was requested</errorMessage>
    </validationRules>
</CustomObject>